2011-12-17 Daniel Dressler <danieru.dressler@gmail.com>

	* unit-test/: I'm reverting my addition of this folder.
	  I do not want to mess with the build script. Maybe
	  sometime when I am more familiar with the scripts I'll
	  feel safe adding a new directory.

	* foomatic-test-build.ln: added work in progress automated
	  build script. Will make the write&test process faster.

	* configure.ac, Makefile.in: Reflected file moves. Moved
	  the scripts I wrote into the admin scripts section.

2011-12-11 Daniel Dressler <danieru.dressler@gmail.com>

	* configure.ac: I missed a configuration change in last commit.
	  The verify xml script did not have its location changed in 
	  configure.ac. Apologies to Yuji Saito who caught my mistake.

2011-12-10 Daniel Dressler <danieru.dressler@gmail.com>

	* ./unit-tests/: Added a unit test directory. In preparation for
	  get_option() I want to bring the unit tests I wrote over the summer
	  into mainline. get_option() will of course require another unit test.

	* foomatic-verify-xml.in: Moved into ./unit-tests/.

2011-08-15  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Removed debug code, added note about get_option missing support
	  for sql backend.

2011-08-15  Daniel Dressler <danieru.dressler@gmail.com>

	* phonebook.pm: Added elements for sql support, added sql schema
	
	* sqlLayer.pm: Initial commit from dev branch: 
	  https://launchpad.net/gsoc2011danieldressler/sqllayer 
	  Handles the brunt work of sqlite exportation.

	* foomatic-xml-to-sqlite: Initial commit from dev branch

2011-08-12  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Fixed a regression introduced in my last patch. Fixed handling of
	  pjl options in nopjl drivers. DB.pm with sqlite backend now produces the
	  same ppds are xlmParse backend.  

2011-08-12  Daniel Dressler <danieru.dressler@gmail.com>

	* DB.pm: Fixed typo in last commit, mixed much older typo in